force-app/main/default/objects/NI_Org_Details_Additional_Logins__c/NI_Org_Details_Additional_Logins__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-009299

With the new version of HRM, an additional Newmarket Login is required for Meetingbroker integration and reporting. The credentials for this login are needed by subscription management ( to setup the user ), Services ( to setup the integration ) and support ( to support the integration ). In order for this login to be accessible in a central place we would like a new object called Additional Logins created that is a “detail” of a Master Detail relationship with the Org details object.</description>
    <label>NI Org Details Additional Logins</label>
    <nameField>
        <displayFormat>AL-{0000}</displayFormat>
        <label>Additional Login Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NI Org Details Additional Logins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>