force-app/main/default/objects/NI_Org_Details_Additional_Logins__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>Salesforce.com Change Request: NICC-019058

Added as part of the Itesso Support Migration Project</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Domain</label>
    <length>80</length>
    <type>Text</type>
</CustomField>