force-app/main/default/objects/NI_Org_Details_Additional_Logins__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <businessOwnerUser>mosorio@newmarketinc.com</businessOwnerUser>
    <description>NICC-044203 and NICC-044204</description>
    <inlineHelpText>License Type.</inlineHelpText>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amadeus Deployed</fullName>
            </value>
            <value>
                <fullName>API Integration</fullName>
            </value>
            <value>
                <fullName>Vendor Deployed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>