force-app/main/default/objects/NI_Org_Details_Additional_Logins__c/fields/Logn_Name__c.field-meta.xml
<CustomField>
    <fullName>Logn_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Logn Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>