force-app/main/default/objects/NI_Org_Details_Additional_Logins__c/fields/NI_Org_Details__c.field-meta.xml
<CustomField>
    <fullName>NI_Org_Details__c</fullName>
    <label>NI Org Details</label>
    <referenceTo>NI_Org_Details__c</referenceTo>
    <relationshipLabel>Additional Logins</relationshipLabel>
    <relationshipName>Additional_Logins</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>