force-app/main/default/objects/NI_Org_Details_Additional_Logins__c/fields/Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Id__c</fullName>
    <description>Org Id of the related Org Details record</description>
    <formula>NI_Org_Details__r.Org_ID__c</formula>
    <inlineHelpText>Org Id of the related Org Details record</inlineHelpText>
    <label>Org Id</label>
    <type>Text</type>
</CustomField>