force-app/main/default/objects/NI_Org_Details_Additional_Logins__c/fields/Password_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Password_Encrypted__c</fullName>
    <description>Salesforce.com Change Request: NICC-019058

Added as part of the Itesso Support Migration Project.  This field replaces the original non-encrypted Password field</description>
    <label>Password (Encrypted)</label>
    <length>80</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>