force-app/main/default/objects/NI_Org_Details_Additional_Logins__c/fields/Property_Code_Resort_ID__c.field-meta.xml
<CustomField>
    <fullName>Property_Code_Resort_ID__c</fullName>
    <businessOwnerUser>mosorio@newmarketinc.com</businessOwnerUser>
    <description>NICC-044203 and NICC-044204.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Property Code/Resort ID.</inlineHelpText>
    <label>Property Code/Resort ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>