force-app/main/default/objects/NI_Org_Details_Additional_Logins__c/fields/Security_Token__c.field-meta.xml
<CustomField>
    <fullName>Security_Token__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Security Token</label>
    <length>80</length>
    <type>Text</type>
</CustomField>