force-app/main/default/objects/NI_Org_Details_Additional_Logins__c/validationRules/SOPassword.validationRule-meta.xml
<ValidationRule>
    <fullName>SOPassword</fullName>
    <active>true</active>
    <description>Validation rule to ensure password is not filled in on SO Org Details. NICC-044203 and NICC-044204</description>
    <errorConditionFormula>AND(NI_Org_Details__r.RecordType.Name = &quot;SO Details&quot;,  Password__c != &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Password__c</errorDisplayField>
    <errorMessage>The password filled should not be used for SO Details</errorMessage>
</ValidationRule>